--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -4,4 +4,4 @@ es:
       no_image: "No hay imagen"
       upload: "Subir archivo"
       url: "URL del archivo"
-      remove: "¿Deseas eliminarl el archivo?"
+      remove: "¿Deseas eliminar el archivo?"
